added auth for sellers
