# docs/swagger.json
@@ -41,6 +41,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Create item",
                 "consumes": [
                     "application/json"
@@ -129,6 +134,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Update item",
                 "consumes": [
                     "application/json"
@@ -173,6 +183,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Delete item",
                 "consumes": [
                     "application/json"
@@ -196,6 +211,49 @@
                 "responses": {
                     "200": {
                         "description": "OK"
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/apperrors.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/apperrors.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/sellers": {
+            "post": {
+                "description": "Create seller",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Sellers"
+                ],
+                "summary": "User can become a seller",
+                "parameters": [
+                    {
+                        "description": "model for create seller",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/httpmodels.CreateSellerRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created"
                     },
                     "400": {
                         "description": "Bad Request",
@@ -271,6 +329,7 @@
         "apperrors.Type": {
             "type": "string",
             "enum": [
+                "AUTHORIZATION",
                 "BAD_REQUEST",
                 "CONFLICT",
                 "INTERNAL"
@@ -281,6 +340,7 @@
                 "Internal": "Server (500) and fallback apperrors - 500"
             },
             "x-enum-varnames": [
+                "Authorization",
                 "BadRequest",
                 "Conflict",
                 "Internal"
@@ -292,11 +352,19 @@
                 "name": {
                     "type": "string"
                 },
-                "owner_id": {
-                    "type": "integer"
-                },
                 "price": {
                     "type": "number"
+                }
+            }
+        },
+        "httpmodels.CreateSellerRequest": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
                 }
             }
         },
@@ -320,9 +388,6 @@
                 "name": {
                     "type": "string"
                 },
-                "owner_id": {
-                    "type": "integer"
-                },
                 "price": {
                     "type": "number"
                 }
@@ -344,6 +409,13 @@
                     "type": "number"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "ApiKeyAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
