# handlers/item.go
@@ -5,43 +5,47 @@ import (
 	"net/http"
 	"project-auction/apperrors"
 	"project-auction/models"
-	"project-auction/server/httpmodels"
+	"project-auction/server/http/httpmodels"
+	"project-auction/services"
 	"strconv"
 )
 
 // CreateItem 		godoc
-// @Summary 		Create item
-// @Description 	Create item
-// @Tags 			Items
-// @Accept  		json
-// @Produce  		json
-// @Param 			request body			httpmodels.CreateItemRequest true "model for create item"
-// @Success 		201	 {object}			models.Item
-// @Failure         400  {object}  			apperrors.Error
-// @Failure         500  {object}  			apperrors.Error
-// @Router 			/items				    [post]
+//
+//	@Summary		Create item
+//	@Description	Create item
+//	@Tags			Items
+//	@Security		ApiKeyAuth
+//	@Accept			json
+//	@Produce		json
+//	@Param			request	body		httpmodels.CreateItemRequest	true	"model for create item"
+//	@Success		201		{object}	models.Item
+//	@Failure		400		{object}	apperrors.Error
+//	@Failure		500		{object}	apperrors.Error
+//	@Router			/items										    [post]
 func (h Handler) CreateItem(c echo.Context) error {
+	ctx, err := services.NewContextFromEchoContext(c)
+	if err != nil {
+		h.Log.Error("failed get context from echo context", err)
+		return c.JSON(http.StatusInternalServerError, apperrors.NewInternal())
+	}
 
 	var req httpmodels.CreateItemRequest
 
 	if err := c.Bind(&req); err != nil {
-
-		h.Log.Error("failed to parse request", err)
-
+		h.Log.ErrorContext(ctx, "failed to parse request", err)
 		return c.JSON(apperrors.Status(err), apperrors.NewBadRequest("incorrect body request"))
 	}
 
 	item := &models.Item{
 		Name:    req.Name,
-		OwnerID: req.OwnerID,
+		OwnerID: ctx.Value(models.SellerIDKey).(int),
 		Price:   req.Price,
 	}
 
-	createItem, err := h.ItemService.CreateItem(item)
+	createItem, err := h.ItemService.CreateItem(ctx, item)
 	if err != nil {
-
-		h.Log.Error("failed to create item", err)
-
+		h.Log.ErrorContext(ctx, "failed to create item", err)
 		return c.JSON(apperrors.Status(err), err)
 	}
 
@@ -56,20 +60,25 @@ func (h Handler) CreateItem(c echo.Context) error {
 }
 
 // GetItems 		godoc
-// @Summary 		Get items
-// @Description 	Get all items
-// @Tags 			Items
-// @Accept  		json
-// @Produce  		json
-// @Success 		200 				{object} 	[]models.Item
-// @Failure 		500 				{object}    apperrors.Error
-// @Router 			/items 				[get]
+//
+//	@Summary		Get items
+//	@Description	Get all items
+//	@Tags			Items
+//	@Accept			json
+//	@Produce		json
+//	@Success		200		{object}	[]models.Item
+//	@Failure		500		{object}	apperrors.Error
+//	@Router			/items 										[get]
 func (h Handler) GetItems(c echo.Context) error {
-	itemsArray, err := h.ItemService.GetItems()
+	ctx, err := services.NewContextFromEchoContext(c)
 	if err != nil {
+		h.Log.Error("failed get context from echo context", err)
+		return c.JSON(http.StatusInternalServerError, apperrors.NewInternal())
+	}
 
-		h.Log.Error("failed to get items", err)
-
+	itemsArray, err := h.ItemService.GetItems(ctx)
+	if err != nil {
+		h.Log.ErrorContext(ctx, "failed to get items", err)
 		return c.JSON(apperrors.Status(err), err)
 	}
 
@@ -90,25 +99,34 @@ func (h Handler) GetItems(c echo.Context) error {
 }
 
 // GetItemByID 		godoc
-// @Summary 		Get item
-// @Description 	Get item by id
-// @Tags 			Items
-// @Accept  		json
-// @Produce  		json
-// @Param 			id 	 path			    string	    	true 		"get item by id"
-// @Success 		200  {object} 	        models.Item
-// @Failure         400  {object}  			apperrors.Error
-// @Failure         500  {object}  			apperrors.Error
-// @Router 			/items/{id} 			[get]
+//
+//	@Summary		Get item
+//	@Description	Get item by id
+//	@Tags			Items
+//	@Accept			json
+//	@Produce		json
+//	@Param			id				path		string	true	"get item by id"
+//	@Success		200				{object}	models.Item
+//	@Failure		400				{object}	apperrors.Error
+//	@Failure		500				{object}	apperrors.Error
+//	@Router			/items/{id} 									[get]
 func (h Handler) GetItemByID(c echo.Context) error {
+	ctx, err := services.NewContextFromEchoContext(c)
+	if err != nil {
+		h.Log.Error("failed get context from echo context", err)
+		return c.JSON(http.StatusInternalServerError, apperrors.NewInternal())
+	}
+
 	id := c.Param("id")
 	idInt, err := strconv.Atoi(id)
 	if err != nil {
+		h.Log.ErrorContext(ctx, "failed to parse id", err)
 		return c.JSON(apperrors.Status(err), apperrors.NewBadRequest("id must be integer."))
 	}
 
-	item, err := h.ItemService.GetItemByID(idInt)
+	item, err := h.ItemService.GetItemByID(ctx, idInt)
 	if err != nil {
+		h.Log.ErrorContext(ctx, "failed to get item by id with id", idInt, "error", err)
 		return c.JSON(apperrors.Status(err), err)
 	}
 
@@ -123,24 +141,29 @@ func (h Handler) GetItemByID(c echo.Context) error {
 }
 
 // UpdateItem 		godoc
-// @Summary 		Update item
-// @Description 	Update item
-// @Tags 			Items
-// @Accept  		json
-// @Produce  		json
-// @Param 			request body			httpmodels.UpdateItemRequest true "model for update item"
-// @Success 		200  {object}			models.Item
-// @Failure         400  {object}  			apperrors.Error
-// @Failure         500  {object}  			apperrors.Error
-// @Router 			/items/{id} 			[put]
+//
+//	@Summary		Update item
+//	@Description	Update item
+//	@Tags			Items
+//	@Security		ApiKeyAuth
+//	@Accept			json
+//	@Produce		json
+//	@Param			request			body		httpmodels.UpdateItemRequest	true	"model for update item"
+//	@Success		200				{object}	models.Item
+//	@Failure		400				{object}	apperrors.Error
+//	@Failure		500				{object}	apperrors.Error
+//	@Router			/items/{id} 									[put]
 func (h Handler) UpdateItem(c echo.Context) error {
+	ctx, err := services.NewContextFromEchoContext(c)
+	if err != nil {
+		h.Log.Error("failed get context from echo context", err)
+		return c.JSON(http.StatusInternalServerError, apperrors.NewInternal())
+	}
 
 	var req httpmodels.UpdateItemRequest
 
 	if err := c.Bind(&req); err != nil {
-
-		h.Log.Error("failed to parse request", err)
-
+		h.Log.ErrorContext(ctx, "failed to parse request", err)
 		return c.JSON(apperrors.Status(err), apperrors.NewInternal())
 	}
 
@@ -151,15 +174,13 @@ func (h Handler) UpdateItem(c echo.Context) error {
 	item := models.Item{
 		ID:      req.ID,
 		Name:    req.Name,
-		OwnerID: req.OwnerID,
+		OwnerID: ctx.Value(models.SellerIDKey).(int),
 		Price:   req.Price,
 	}
 
-	updateItem, err := h.ItemService.UpdateItem(item)
+	updateItem, err := h.ItemService.UpdateItem(ctx, item)
 	if err != nil {
-
-		h.Log.Error("failed to update item", err)
-
+		h.Log.ErrorContext(ctx, "failed to update item", err)
 		return c.JSON(apperrors.Status(err), err)
 	}
 
@@ -174,24 +195,34 @@ func (h Handler) UpdateItem(c echo.Context) error {
 }
 
 // DeleteItemByID 		godoc
-// @Summary 		Delete item
-// @Description 	Delete item
-// @Tags 			Items
-// @Accept  		json
-// @Produce  		json
-// @Param 			id 	 path			    string	    	true 		"delete item by id"
-// @Success 		200
-// @Failure         400  {object}  			apperrors.Error
-// @Failure         500  {object}  			apperrors.Error
-// @Router 			/items/{id} 			[delete]
+//
+//	@Summary		Delete item
+//	@Description	Delete item
+//	@Tags			Items
+//	@Security		ApiKeyAuth
+//	@Accept			json
+//	@Produce		json
+//	@Param			id	path	string	true	"delete item by id"
+//	@Success		200
+//	@Failure		400				{object}	apperrors.Error
+//	@Failure		500				{object}	apperrors.Error
+//	@Router			/items/{id} 									[delete]
 func (h Handler) DeleteItemByID(c echo.Context) error {
+	ctx, err := services.NewContextFromEchoContext(c)
+	if err != nil {
+		h.Log.Error("failed get context from echo context", err)
+		return c.JSON(http.StatusInternalServerError, apperrors.NewInternal())
+	}
+
 	id := c.Param("id")
 	idInt, err := strconv.Atoi(id)
 	if err != nil {
+		h.Log.ErrorContext(ctx, "failed to parse id", err)
 		return c.JSON(apperrors.Status(err), apperrors.NewBadRequest("id must be integer."))
 	}
 
-	if err := h.ItemService.DeleteItemByID(idInt); err != nil {
+	if err := h.ItemService.DeleteItemByID(ctx, idInt); err != nil {
+		h.Log.ErrorContext(ctx, "failed to delete item with id", idInt, "error", err)
 		return c.JSON(apperrors.Status(err), err)
 	}
 
