# server/http/httpmodels/seller.go
@@ -1,0 +1,15 @@
+package httpmodels
+
+type BaseSeller struct {
+	Email    string `json:"email"`
+	Password string `json:"password"`
+}
+
+type CreateSellerRequest struct {
+	BaseSeller
+}
+
+type CreateSellerResponse struct {
+	AccessToken  string `json:"accessToken"`
+	RefreshToken string `json:"refreshToken"`
+}
