# server/http/httpmodels/user.go
@@ -6,8 +6,7 @@ type BaseUser struct {
 }
 
 type CreateUserRequest struct {
-	Email    string `json:"email"`
-	Password string `json:"password"`
+	BaseUser
 }
 
 type CreateUserResponse struct {
